<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_name1"
        android:textSize="18sp"
        android:onClick="clickEvent">
    </Button>

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_name2"
        android:textSize="18sp"
        android:onClick="clickEvent">
    </Button>

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_name3"
        android:textSize="18sp"
        android:onClick="clickEvent">
    </Button>

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickEvent"
        android:text="@string/activity_name4"
        android:textSize="18sp"></Button>

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickEvent"
        android:text="@string/activity_name5"
        android:textSize="18sp"></Button>

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickEvent"
        android:text="@string/activity_name6"
        android:textSize="18sp"></Button>

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickEvent"
        android:text="@string/activity_name7"
        android:textSize="18sp"></Button>


</LinearLayout>
